add navbar + showcase slider

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
             <a href="index.html" class="navbar-brand">Glozzom</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="navbarCollapse">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse">
+            <div id="navbarCollapse" class="navbar-collapse collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a href="index.html" class="nav-link">Home</a>
@@ -47,7 +47,58 @@
             </div>
         </div>
     </div>
+    <!-- showcase -->
 
+    <section id="showcase">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item carousel-image-1 active">
+                    <div class="container">
+                        <div class="carousel-caption d-none d-sm-block text-left mb-5">
+                            <h1 class="display-3">Heading One</h1>
+                            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
+                                distinctio similique recusandae soluta laudantium ullam suscipit aliquam dicta amet
+                                laborum?</p>
+                            <a href="#" class="btn btn-danger btn-lg">Sign up now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image-2 ">
+                    <div class="container">
+                        <div class="carousel-caption d-none d-sm-block text-center mb-5">
+                            <h1 class="display-3">Heading Two</h1>
+                            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
+                                distinctio similique recusandae soluta laudantium ullam suscipit aliquam dicta amet
+                                laborum?</p>
+                            <a href="#" class="btn btn-primary btn-lg">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image-3">
+                    <div class="container">
+                        <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                            <h1 class="display-3">Heading Three</h1>
+                            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
+                                distinctio similique recusandae soluta laudantium ullam suscipit aliquam dicta amet
+                                laborum?</p>
+                            <a href="#" class="btn btn-success btn-lg">End of slides</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="#myCarousel" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a href="#myCarousel" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </section>
     <!-- Jquery minifed version -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
