add gallery + formLetter + footer

--- a/index.html
+++ b/index.html
@@ -195,7 +195,83 @@
             </div>
         </div>
     </div>
-    <!--  -->
+
+
+    <!-- Gallery + footer(Newsletter) -->
+    <section id="gallery" class="py-5">
+        <div class="container">
+            <h1 class="text-center">Photo Gallery</h1>
+            <p class="text-center">Check out Our Photos (LOL)</p>
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="560" data-width="560" alt="">
+                        <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid"></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="561" data-width="561" alt="">
+                        <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="562" data-width="562" alt="">
+                        <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="560" data-width="560" alt="">
+                        <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid"></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="561" data-width="561" alt="">
+                        <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox"
+                        data-gallery="img-gallery" data-height="562" data-width="562" alt="">
+                        <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- NewsLetter(footer) -->
+
+    <section id="newsletter" class="text-center p-5 bg-dark text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Sign Up For Our NewsLetter</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ad numquam saepe at laborum
+                        voluptas maxime! In unde soluta suscipit. </p>
+                    <form class="form-inline justify-content-center">
+                        <input type="text" placeholder="Enter Name" class="form-control mb-2 mr-2">
+                        <input type="text" placeholder="Enter E-mail" class="form-control mb-2 mr-2">
+                        <button class="btn btn-primary mb-2">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+
+    <footer id="main-footer" class="text-center p-4">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>CopyRight &copy; <span class="span" id="year"></span>
+                        Glozzom </p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Jquery minifed version -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
