--- a/services.html
+++ b/services.html
@@ -53,7 +53,122 @@
             </div>
         </div>
     </header>
-
+    <!-- Services section -->
+    <section id="services" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-header bg-dark text-white">
+                            <h3>Services One Plan</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                $59.99/Month
+                            </h4>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, eius.
+                            </p>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature One
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Two
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Three
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Four
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Five
+                                </li>
+                            </ul>
+                            <a href="#" class="btn btn-danger btn-block mt-2">Subscribe</a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            1 Year plan
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-header bg-dark text-white">
+                            <h3>Services One Plan</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                $59.99/Month
+                            </h4>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, eius.
+                            </p>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature One
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Two
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Three
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Four
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Five
+                                </li>
+                            </ul>
+                            <a href="#" class="btn btn-danger btn-block mt-2">Subscribe</a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            1 Year plan
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-header bg-dark text-white">
+                            <h3>Services One Plan</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                $59.99/Month
+                            </h4>
+                            <p class="card-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, eius.
+                            </p>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature One
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Two
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Three
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Four
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Feature Five
+                                </li>
+                            </ul>
+                            <a href="#" class="btn btn-danger btn-block mt-2">Subscribe</a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            1 Year plan
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer id="main-footer" class="text-center p-4">
         <div class="container">
