add form on contact page

--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,76 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <h1>Read Our Blog</h1>
+                    <h1>Contact Us</h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
                 </div>
             </div>
         </div>
     </header>
 
-
-
+    <!-- Contact -->
+    <section id="contact" class="py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card p-4">
+                        <div class="card-body">
+                            <h4>Get In Touch</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, perspiciatis!</p>
+                            <h4>Address</h4>
+                            <p>Kyiv,123,ul.Chreshatik</p>
+                            <h4>Email</h4>
+                            <p>test@test.com</p>
+                            <h4>Phone</h4>
+                            <p>1231412312</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card p-4">
+                        <div class="card-body">
+                            <h3 class="text-center">Please zapolnite ety formy cho by svyzatsya s name pj pj XD</h3>
+                            <hr>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Enter your First Name">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Enter your Last Name">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input class="form-control" type="email" placeholder="Enter your Email">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Enter your Phone number">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <textarea class="form-control" placeholder="Message"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="submit" value="Submit" class="btn btn-outline-danger btn-block">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer id="main-footer" class="text-center p-4">
         <div class="container">
