Staff Team img + footer

--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,36 @@
             </div>
         </div>
     </section>
+
+    <!-- team photos -->
+    <section id="teamFace" class="py-5 text-center bg-dark text-white">
+        <div class="container">
+            <h1>Our Team</h1>
+            <hr>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="./img/person1.jpg" alt="" class="img-fluid rounded-circle mb-2">
+                    <h4> Person Alina</h4>
+                    <small class="text-muted">Market Manager</small>
+                </div>
+                <div class="col-md-3">
+                    <img src="./img/person2.jpg" alt="" class="img-fluid rounded-circle mb-2">
+                    <h4> Person Katya</h4>
+                    <small class="text-muted">HR</small>
+                </div>
+                <div class="col-md-3">
+                    <img src="./img/person3.jpg" alt="" class="img-fluid rounded-circle mb-2">
+                    <h4> Person Fedya</h4>
+                    <small class="text-muted">Sell boy</small>
+                </div>
+                <div class="col-md-3">
+                    <img src="./img/person4.jpg" alt="" class="img-fluid rounded-circle mb-2">
+                    <h4> Person Petya</h4>
+                    <small class="text-muted">CEO</small>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer id="main-footer" class="text-center p-4">
         <div class="container">
