--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Подключка стилей -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Glozzom</title>
 </head>
 
 <body>
@@ -278,10 +278,10 @@
     <!-- popperJS + bootstrapJS without slimJS! -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script>
         // Получаем год(который на компе) для footer copyright
@@ -307,7 +307,7 @@
                 var theModal = $(this).data("target"),
                     videoSRC = $(this).attr("data-video"),
                     videoSRCauto = videoSRC +
-                    "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+                        "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
                 $(theModal + ' iframe').attr('src', videoSRCauto);
                 $(theModal + ' button.close').click(function () {
                     $(theModal + ' iframe').attr('src', videoSRC);
